# Task-Manager

./: .env_example  .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: test_coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: custom_contrib_mixins.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html  login.html
task_manager/templates/actions/: create_or_update.html  delete.html
task_manager/templates/labels/: labels.html
task_manager/templates/statuses/: statuses.html
task_manager/templates/tasks/: task.html  tasks.html
task_manager/templates/users/: users.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
