[project]
name = "hexlet-code"
version = "0.1.0"
description = "task_manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "django-bootstrap5>=24.3",
    "django-filter>=24.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "rollbar>=1.1.2",
    "pytest-django>=4.9.0"
]

[dependency-groups]
dev = [
    "gunicorn>=23.0.0",
    "ruff>=0.9.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = ['tests.py', "test_*.py", '*_test.py', "testing/python/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]